Fix for submit button
added extra padding between elements for mobile

Fixed footer on mobile devices

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <textarea class="messageBox" rows="7" cols="50" id="textarea" name="message" placeholder="Enter your message:"></textarea>
             </div>
-            <button class="submit">Send Message</button>
+            <input type="submit" class="submit" value="Send Message">
 
         </form>
     </section>
