--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="aboutText">
             <h2 class="sectionTitle">About Me</h2>
             <p class="sectionText"> I'm a fullstack web developer with a business background. I graduated from the University of Guelph-Humber with honours in Business Administration and since then have continued to grow my skill set. Solving business problems is something that I've always had a passion for and now with web development I'm able to do so in new ways.</p>
-             <p class="sectionText"> My skills include HTML, CSS and Javascript and I have exeperience with CMS platforms such as Wordpress and Shopify and have worked on projects for small businesses as well as larger corporations. 
+             <p class="sectionText"> My skills include HTML, CSS and Javascript. I have exeperience with CMS platforms such as Wordpress and Shopify and have worked on projects for small businesses as well as larger corporations Please view my resume to learn more. 
             </p>
             <button class="resume">
                 Download my resume
