--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <a id="home">
     <header>
         <img src="img/Sites by Nick-logo/vector/default-monochrome-black.svg">
-        <h1 class="title">Hi, I'm Nick, a fullstack web developer </h1>
+        <h1 class="title">Hi, I'm Nick, a Toronto based web developer </h1>
     </header>
     <section class="about"> 
         <section class="aboutText">
             <h2 class="sectionTitle">About Me</h2>
-            <p class="sectionText"> I'm a fullstack web developer with a business background. I graduated from the University of Guelph-Humber with honours in Business Administration and since then have continued to grow my skill set. Solving business problems is something that I've always had a passion for and now with web development I'm able to do so in new ways.</p>
+            <p class="sectionText"> I'm a web developer with a business background. I graduated from the University of Guelph-Humber with honours in Business Administration and since then have continued to grow my skill set. Solving business problems is something that I've always had a passion for and now with web development I'm able to do so in new ways.</p>
              <p class="sectionText"> My skills include HTML, CSS and Javascript. I have experience with CMS platforms such as Wordpress and Shopify and have worked on projects for small businesses as well as larger corporations. Please see my resume below to learn more. 
             </p>
             <a href="/NicholasNesciResume.pdf"><button class="resume">
