add budget project to portfolio section

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             </section>
 
             <section class="col">
-                <h3 class="projectName">Salon Layout Page </h3>
+                <h3 class="projectName">Budget Calculator App </h3>
                 <div class="colImgContainer">
-                    <a href="https://salon-project.netlify.app/" target="_blank"> <img class="colimg" src="/img/salong.jpg"></a>
+                    <a href="https://budgetcalculator-webapp.netlify.app/" target="_blank"> <img class="colimg" src="/img/budgetApp.jpg"></a>
                 </div>
                 <p class="projectText">
-                    This template was created using HTML & CSS. It is fully responsive and was made using floats as opposed to modern solutions like flexbox or CSS grid. 
+                    This web app was created using HTML, CSS and Javascript. It allows the user to create a budget by keeping track of their expenses and tallying a total balance. The project is fully responsive and mobile friendly.  
                 </p>
             </section>
 
